rdisc,device: Set MTU if an appropriate option is present in a RA

https://bugzilla.gnome.org/show_bug.cgi?id=738104

Reported-by: Charles R. Anderson <cra@wpi.edu>